--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -67,6 +67,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8.5",
+    "supabase": "^2.58.5",
     "tailwindcss": "^4.1.9",
     "typescript": "^5"
   }
