--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -64,6 +64,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
     "@types/node": "^22",
+    "@types/phoenix": "^1.6.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8.5",
